# Automatization-Files

./: CMakeLists.txt  README.md
src/: functions.cc  functions.h  main.cc
